--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1082,7 +1082,7 @@
 </dd>
 
 <dt><abbr title="Provincial parental insurance plan">PPIP</abbr> insurable earnings are the same as employment income</dt>
-<dd><p><strong>Do not </strong>report the <abbr title="Provincial parental insurance plan">PPIP</abbr> insurable earnings using box 56 if the amount is the same as the employment income in box 14. </p></dd>
+<dd><p><strong>Do not </strong> report an amount using box 56 if the amount for the <abbr title="Provincial parental insurance plan">PPIP</abbr> insurable earnings are over the maximum for the year.</p></dd>
 
 </dl>   
 
@@ -1138,7 +1138,7 @@
 <li class="code-num mrgn-lft-md">  <details><summary>Box 50 – RPP or DPSP registration number </summary>
          <p id="bx_50">Enter the 7-digit registration number that the CRA gave you for your <abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit-sharing plan">DPSP</abbr> using box 50 if you reported an amount for a pension adjustment (<abbr title="pension adjustment">PA</abbr>) using <a href="#bx_52">box 52</a>.</p> 
 
-<p>You have to report the plan number even if your plan requires only employer contributions. If you make contributions to union pension funds, enter the unio's plan number.</p>
+<p>You have to report the plan number even if your plan requires only employer contributions. If you make contributions to union pension funds, enter the union's plan number.</p>
 
 <p>If you made contributions to <strong>more than one</strong> plan for the employee, enter only the number of the plan under which the employee has the largest <abbr title="pension adjustment">PA</abbr>.</p> 
             </details>
@@ -1185,7 +1185,7 @@
 <dt>Initiation fees </dt>
 <dd><p><strong>Do not</strong> report initiation fees using box 44. </p></dd>
 <dt>Strike pay</dt>
-<dd><p><strong>Do not</strong> report using box 44 <strong>strike pay</strong> the union paid to union members </p></dd>
+<dd><p><strong>Do not</strong> report <strong>strike pay</strong> the union paid to union members using box 44.</p></dd>
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p><strong>Do not</strong> report an amount for union dues relating to tax-exempt income you paid to an employee who is registered, or entitled to be registered under the Indian Act using box 44.</p>
 <p>If you pay taxable or partly tax-exempt employment income, you must prorate the amount for union dues and report the amount related to their taxable income using box 44.</p>
@@ -1311,7 +1311,7 @@
 			</li>
 
 <li class="code-num mrgn-lft-md"><details><summary >Code 40 – Other taxable allowances and benefits </summary> 
-<p id="cd_40">Report the value of the taxable benefits you provided to your employee using code 40 <strong>and</strong> <a href="#bx_14_cd_40">box 14</a> unless the benefit is reported in other codes of the T4 slip.  </p>
+<p id="cd_40">Report the value of the taxable benefits and allowances you provided to your employee using code 40 <strong>and</strong> <a href="#bx_14_cd_40">box 14</a> unless the benefit is reported in other codes of the T4 slip.  </p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></p>
             </details> 
 			</li>
@@ -1338,7 +1338,7 @@
 
 	
 <li class="code-num mrgn-lft-md"><details><summary>Code 66 – Eligible retiring allowances </summary> 
-<p  id="cd_66">Report eligible retiring allowances you paid in the year to your employee that are eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>, even if it was not transferred using code 66. </p>
+<p  id="cd_66">Report eligible retiring allowances using code 66 that you paid in the year to your employee that are eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>, even if it was not transferred. </p>
             <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
