--- a/guides/alberta/onepager-new.html
+++ b/guides/alberta/onepager-new.html
@@ -74,17 +74,7 @@
                     <p class="mrgn-tp-md">Use the information on this page to help you complete your Alberta tax and credits form. Form AB428 is completed after you have completed steps 1 to 6 of your income tax and benefit return.</p>
 			<div class="mwsbodytext text parbase section">
 
-<div class="col-sm-3 pull-right"><div class="thumbnail p-sm-3"><h2 class="mrgn-tp-0" id="h-3">PDF version</h2>
 
-<div class="textimage parbase section"><figure><img src="https://test.canada.ca/cra-arc/guides/alberta/alberta-tax-guide.jpg" alt="Alberta tax guide" class="img-responsive img-thumbnail img-responsive cq-dd-image" data-emptytext="Image"></figure></div>
-
-<div class="mrgn-tp-md mrgn-bttm-md"><a class="btn btn-primary btn-block btn-lg stretched-link" href="https://www.canada.ca/content/dam/cra-arc/formspubs/pub/rc4417/rc4417-12-13e.pdf" role="button"><span class="fas fa-file-download"></span>&nbsp;Download</a></div>
-
-<p><small>PDF, 95KB, 20 pages</small></p>
-
-</div>
-
-</div>
 
 <div class="clearfix visible-xs">&nbsp;</div>
 
@@ -97,7 +87,7 @@
 <li><a href="#h-2">File on time to receive benefits on time</a></li>
 <li><a href="#h-3">How to file your taxes</a></li>
 <li><a href="#h-4">Get and complete the necessary forms</a></li>
-
+<li><a href="#h-5">Download a copy of this content</a></li>
 
 
 <li><a href="#h-6">Prior years</a></li>
@@ -970,6 +960,20 @@
 	</div>
 
 	
+</div>
+<h2 id="h-5">Download a copy of this content</h2>
+<div class="row">
+<div class="col-sm-3"><div class="thumbnail p-sm-3"><h2 class="mrgn-tp-0" id="h-3">PDF version</h2>
+
+<div class="textimage parbase section"><figure><img src="https://test.canada.ca/cra-arc/guides/alberta/alberta-tax-guide.jpg" alt="Alberta tax guide" class="img-responsive img-thumbnail img-responsive cq-dd-image" data-emptytext="Image"></figure></div>
+
+<div class="mrgn-tp-md mrgn-bttm-md"><a class="btn btn-primary btn-block btn-lg stretched-link" href="https://www.canada.ca/content/dam/cra-arc/formspubs/pub/rc4417/rc4417-12-13e.pdf" role="button"><span class="fas fa-file-download"></span>&nbsp;Download</a></div>
+
+<p><small>PDF, 95KB, 20 pages</small></p>
+
+</div>
+
+</div>
 </div>
 <div class="mwsbodytext text parbase section">
 
