--- a/guides/alberta/onepager-new.html
+++ b/guides/alberta/onepager-new.html
@@ -963,7 +963,7 @@
 </div>
 <h2 id="h-5">Download a copy of this content</h2>
 <div class="row">
-<div class="col-sm-3"><div class="thumbnail p-sm-3"><h2 class="mrgn-tp-0" id="h-3">PDF version</h2>
+<div class="col-sm-3"><div class="thumbnail p-sm-3">
 
 <div class="textimage parbase section"><figure><img src="https://test.canada.ca/cra-arc/guides/alberta/alberta-tax-guide.jpg" alt="Alberta tax guide" class="img-responsive img-thumbnail img-responsive cq-dd-image" data-emptytext="Image"></figure></div>
 
