--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -759,7 +759,7 @@
             </details>
 </li>
 
-<li class="code-num mrgn-lft-md"><details><summary >Box 16A – Employee's second CPP (CPP2) contributions <span class="label label-warning">Slips filed for calendar year 2024 and after</span> </summary>	
+<li class="code-num mrgn-lft-md"><details><summary >Box 16A – Employee's second CPP contributions (CPP2) <span class="label label-warning">Slips filed for calendar year 2024 and after</span> </summary>	
 <p id="bx_16a">For T4 slips filed for calendar year 2024 and after, report the amount of <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions you deducted from your employee in box 16A if you enter in <a href="#bx_10">box 10</a> that your employee had a province of employment other than Quebec.</p>
 
  <h4>Specific situations</h4>
@@ -837,7 +837,7 @@
             </details>  
     </li>
 
-<li class="code-num mrgn-lft-md"><details><summary>Box 17A – Employee's second QPP (QPP2) contributions <span class="label label-warning">Slips filed for calendar year 2024 and after</span> </summary>
+<li class="code-num mrgn-lft-md"><details><summary>Box 17A – Employee's second QPP contributions (QPP2) <span class="label label-warning">Slips filed for calendar year 2024 and after</span> </summary>
 <p id="bx_17a">For T4 slips filed for calendar year 2024 and after, report the amount of <abbr title="Second Quebec Pension Plan">QPP2</abbr> contributions you deducted from your employee in box 17A if you enter in <a href="#bx_10">box 10</a> that your employee worked in the <strong>province of Quebec</strong>.</p>
 
  <h4>Specific situations</h4>
