--- a/payroll/file/t4summary.html
+++ b/payroll/file/t4summary.html
@@ -262,9 +262,9 @@
   <p>Add the amounts in box 16 of all T4 slips. Report the total on line 16.</p> 
  </details> 
 
-<details><summary id="bx_16a">Boxes 16A – Employee's second CPP (CPP2) contributions <span class="label label-warning">Slips filed for calendar year 2024 and after</span> </summary>	
+<details><summary id="bx_16a">Boxes 16A – Employee's second CPP contributions (CPP2) <span class="label label-warning">Slips filed for calendar year 2024 and after</span> </summary>	
 <p>For T4 summaries filed for calendar year 2024 and after, add the amounts in box 16A of all T4 slips. Report the total on line 16A.</p>
-<p>The CRA will provide more instructions by the end of 2023. </p>
+<p>If required, the CRA may need to update the instructions during 2023.</p>
 </details>	
 
 <details>
@@ -272,9 +272,9 @@
   <p>Report your share of CPP contributions on line 27.</p> 
  </details>
 
-<details><summary id="bx_27a">Boxes 27A – Employer's second CPP (CPP2) contributions <span class="label label-warning">Slips filed for calendar year 2024 and after</span> </summary>	
+<details><summary id="bx_27a">Boxes 27A – Employer's second CPP contributions (CPP2) <span class="label label-warning">Slips filed for calendar year 2024 and after</span> </summary>	
 <p>For T4 summaries filed for calendar year 2024 and after, report your share of CPP2 contributions on line 27A.</p>
-<p>The CRA will provide more instructions by the end of 2023. </p>
+<p>If required, the CRA may need to update the instructions during 2023. </p>
  </details> 
 
 <details>
