--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -4965,7 +4965,7 @@
 <section id="itratefed" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Federal tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Federal tax rate" (<strong>column&nbsp;2)</strong> that matches the range of the "Employee's annual taxable income" (<strong>column&nbsp;1)</strong> </h3>
+<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Federal tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratefed"></div>
   </div>
@@ -4974,7 +4974,7 @@
 <section id="itratefed1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Federal tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Federal constant" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>column&nbsp;1)</strong> </h3>
+<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Federal constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratefed"></div>
   </div>
@@ -4983,7 +4983,7 @@
 <section id="itrateall" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Provincial or territorial tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial or territorial tax rate" (<strong>column&nbsp;2)</strong> that matches the range of the "Employee's annual taxable income" (<strong>column&nbsp;1)</strong> </h3>
+<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial or territorial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
 
 <details><summary>Manitoba tax rates and income thresholds</summary>  
 <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itrateman"></div>
@@ -5016,7 +5016,7 @@
 <section id="itrateall1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Provincial or territorial tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>column&nbsp;1)</strong> </h3>
+<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
 
       <details><summary>Manitoba tax rates and income thresholds</summary>  
 <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itrateman"></div>
@@ -5049,7 +5049,7 @@
 <section id="itratealb" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Alberta tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;2)</strong> that matches the range of the "Employee's annual taxable income" (<strong>column&nbsp;1)</strong> </h3>
+<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratealb"></div>
   </div>
@@ -5058,7 +5058,7 @@
 <section id="itratebc" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> British Columbia tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;2)</strong> that matches the range of the "Employee's annual taxable income" (<strong>column&nbsp;1)</strong> </h3>
+<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratebc"></div>
   </div>
@@ -5067,7 +5067,7 @@
 <section id="itratebc1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> British Columbia tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>column&nbsp;1)</strong> </h3>
+<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratebc"></div>
   </div>
@@ -5076,7 +5076,7 @@
 <section id="itrateot" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Ontario tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;2)</strong> that matches the range of the "Employee's annual taxable income" (<strong>column&nbsp;1)</strong> </h3>
+<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itrateot"></div>
   </div>
@@ -5085,7 +5085,7 @@
 <section id="itrateot1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Ontario tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>column&nbsp;1)</strong> </h3>
+<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itrateot"></div>
   </div>
@@ -5115,9 +5115,9 @@
 <p>For 2022, the Ontario's surtax is:</p>
 
 <ul>
-<li>where the basic provincial tax payable is less than or equal to $4,991, the surtax is $0 </li>
-<li>where the basic provincial tax payable is greater than $4,991 and less than or equal to $6,387, the surtax is 20% of the basic provincial tax payable over $4,991 </li>
-<li>where the basic provincial tax payable is greater than $6,387, the surtax is 20% of the basic provincial tax payable over $4,991, plus 36% of the basic provincial tax payable over $6,387 </li>
+<li>Where the basic provincial tax payable is less than or equal to $4,991, the surtax is $0 </li>
+<li>Where the basic provincial tax payable is greater than $4,991 and less than or equal to $6,387, the surtax is 20% of the basic provincial tax payable over $4,991 </li>
+<li>Where the basic provincial tax payable is greater than $6,387, the surtax is 20% of the basic provincial tax payable over $4,991, plus 36% of the basic provincial tax payable over $6,387 </li>
 </ul>
 
       
@@ -5128,7 +5128,7 @@
 <section id="itratepei" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Prince Edward Island tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;2)</strong> that matches the range of the "Employee's annual taxable income" (<strong>column&nbsp;1)</strong> </h3>
+<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratepei"></div>
   </div>
@@ -5137,7 +5137,7 @@
 <section id="itratepei1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Prince Edward Island tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>column&nbsp;1)</strong> </h3>
+<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratepei"></div>
   </div>
