--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -4399,7 +4399,7 @@
                                  <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-percent fa-stack-1x"></i>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> <a href="#itratealb" aria-controls="mid-screen" class="overlay-lnk" role="button">Provincial tax rate&nbsp;<span class="far fa-question-circle"></span></a> based on their income</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> <a href="#itratealb1" aria-controls="mid-screen" class="overlay-lnk" role="button">Provincial tax rate&nbsp;<span class="far fa-question-circle"></span></a> based on their income</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
 
@@ -4414,7 +4414,7 @@
                                  <span class="fas fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x"></i>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> <a href="#itratealb" aria-controls="mid-screen" class="overlay-lnk" role="button">Provincial constant&nbsp;<span class="far fa-question-circle"></span></a> based on their income</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> <a href="#itratealb2" aria-controls="mid-screen" class="overlay-lnk" role="button">Provincial constant&nbsp;<span class="far fa-question-circle"></span></a> based on their income</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
                              
@@ -4965,7 +4965,8 @@
 <section id="itratefed" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Federal tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Federal tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
+
+<p class="lead hidden" id="fedcol1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Federal tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratefed"></div>
   </div>
@@ -4974,7 +4975,8 @@
 <section id="itratefed1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Federal tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Federal constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
+
+<p class="lead hidden" id="fedcol2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Federal constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratefed"></div>
   </div>
@@ -4983,7 +4985,7 @@
 <section id="itrateall" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Provincial or territorial tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial or territorial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
+<p class="lead hidden" id="provcol1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial or territorial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
 <details><summary>Manitoba tax rates and income thresholds</summary>  
 <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itrateman"></div>
@@ -5016,7 +5018,7 @@
 <section id="itrateall1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Provincial or territorial tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
+<p class="lead hidden" id="provcol2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
       <details><summary>Manitoba tax rates and income thresholds</summary>  
 <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itrateman"></div>
@@ -5046,10 +5048,19 @@
 </section>
 
 
-<section id="itratealb" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
+<section id="itratealb1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Alberta tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
+<p class="lead hidden" id="albcol1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
+
+       <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratealb"></div>
+  </div>
+</section>
+
+<section id="itratealb2" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
+  <header class="modal-header"><h2 class="modal-title"> Alberta tax rates and income thresholds</h2></header>
+  <div class="modal-body">
+<p class="lead hidden" id="albcol2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratealb"></div>
   </div>
@@ -5058,7 +5069,7 @@
 <section id="itratebc" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> British Columbia tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
+<p class="lead hidden" id="bccol1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratebc"></div>
   </div>
@@ -5067,7 +5078,7 @@
 <section id="itratebc1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> British Columbia tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
+<p class="lead hidden" id="bccol2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratebc"></div>
   </div>
@@ -5076,7 +5087,7 @@
 <section id="itrateot" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Ontario tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
+<p class="lead hidden" id="oncol1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itrateot"></div>
   </div>
@@ -5085,7 +5096,7 @@
 <section id="itrateot1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Ontario tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
+<p class="lead hidden" id="oncol2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itrateot"></div>
   </div>
@@ -5128,7 +5139,7 @@
 <section id="itratepei" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Prince Edward Island tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
+<p class="lead hidden" id="peicol1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratepei"></div>
   </div>
@@ -5137,7 +5148,7 @@
 <section id="itratepei1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Prince Edward Island tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<h3><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </h3>
+<p class="lead hidden" id="peicol2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratepei"></div>
   </div>
