--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -575,6 +575,9 @@
 
                      </tbody>
                   </table>
+
+<p>Given that employees have received a lower basic personal amount for the first six months of the year, a prorated basic personal amount of $19,145 is used.</p>
+
                </details>
                <details>
                   <summary>New Brunswick </summary>
